# xdefi-test

./: README.md  build.sh
app/: README.md  package.json
app/public/: index.html
app/src/app/: App.tsx  Form.tsx  GlobalStyle.tsx  Signature.tsx
app/src/app/specs/: Form.spec.tsx
app/src/app/specs/__snapshots__/: Form.spec.tsx.snap
app/src/components/: Button.tsx  TextInput.tsx
elliptic-curve/: Cargo.toml  README.md
elliptic-curve/src/: lib.rs
