[package]
name = "elliptic-curve"
version = "0.1.0"
authors = ["Dimitry Kislichenko <dimitrykislichenko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.73"
zkp-elliptic-curve = "0.2.0"
zkp-u256 = "0.2.1"
zkp-elliptic-curve-crypto = "0.2.0"
serde_json = "1.0.64"
sha2 = "0.9.3"
ring = "0.16.20"

[patch.crates-io]
page_size = { git = "https://github.com/sunfishcode/page_size_rs" }
